Implement Python dict, tuple, and del operator
Introduce new interfaces and apply them to PyTuple, PyList, and PyDict:
- ItemGetter: __getitem__(key)
- ItemSetter: __setitem__(key, value)
- ItemDeleter: __delitem__(key)
- ItemContainer: __contains__(item)

Support unpacking of objects implementing ItemGetter in `for` loop for
assigning to tuple of variables.